Fix th align from bootstrap-rtl

--- a/src/Mohassel/custom.scss
+++ b/src/Mohassel/custom.scss
@@ -6,3 +6,7 @@ $theme-colors: (
 $green: #7dc356;
 
 @import "~bootstrap-v4-rtl/scss/bootstrap-rtl";
+
+.rtl th, [dir="rtl"] th {
+	text-align: center;
+}
